2002-06-27  Dave Love  <fx@gnu.org>

	* Makefile.in (DONTCOMPILE): Fix duplicates.

	* emacs-lisp/bytecomp.el (byte-compile-insert-header): Fix typo.

	* international/mule.el (load-with-code-conversion): Fix
	coding-system-type test.

	* international/mule-cmds.el (sort-coding-systems): Comment out
	iso-2022 case.
	(encoded-string-description): Fix coding-system-type test.

2002-06-24  Dave Love  <fx@gnu.org>

	* international/characters.el: Make korean-ksc5601 double-width.

	* international/mule.el (auto-coding-regexp-alist): Recognize
	Emacs 20/1 byte-compiled files.

	* international/mule-conf.el (file-coding-system-alist): Change
	.elc to utf-8-emacs.

	* emacs-lisp/bytecomp.el (byte-recompile-directory)
	(batch-byte-recompile-directory): Update from trunk.
	(byte-compile-fix-header): Adjust for use of utf-8-emacs.
	(byte-compile-insert-header): Update magic number.  Add ballast.
	(map-char-table): Use byte-compile-funarg-2.

2002-06-16  Dave Love  <fx@gnu.org>

	* international/mule-cmds.el (set-locale-environment): Use
	locale-codeset.

2002-06-15  Dave Love  <fx@gnu.org>

	* language/cyrillic.el ("Belarusian"): Doc fix.
	(Cp1125, koi8-t): Doc fix.

	* international/mule-cmds.el (find-multibyte-characters): Doc fix.
	(find-multibyte-characters): Don't test for charset `unknown'.
	(locale-language-names): Change or add: be, bs, cy, mk, ru.koi8,
	ru, sr_YU, tg, wa, zh.gbk.
	(locale-language-names): Change sp to Cyrillic.
	(locale-charset-language-names): Match @euro after utf-8.

2002-06-13  Dave Love  <fx@gnu.org>

	* language/chinese.el (chinese-gbk, gbk, cp936, windows-936): New
	coding systems.
	("Chinese-GBK"): New environment.

2002-06-12  Dave Love  <fx@gnu.org>

	* language/chinese.el (chinese-gbk, gbk, cp936, windows-936): New
	coding systems.
	("Chinese-GBK"): New environment.

	* language/thai-util.el: Remove redundant unicodes in
	category-setting.

	* language/lao-util.el: Remove redundant unicodes in
	category-setting.
