@@ -144,6 +144,7 @@
 (put 'nnmail-various 'custom-loads '("nnmail" "nntp"))
 (put 'smiley 'custom-loads '("smiley-ems"))
 (put 'extensions 'custom-loads '("generic" "time-stamp" "wid-edit" "cust-print" "eldoc" "page-ext"))
+(put 'tetris 'custom-loads '("tetris"))
 (put 'ebnf-displacement 'custom-loads '("ebnf2ps"))
 (put 'appt 'custom-loads '("appt"))
 (put 'snmp 'custom-loads '("snmp-mode"))
@@ -151,7 +152,7 @@
 (put 'rmail 'custom-loads '("paths" "rmail" "undigest"))
 (put 'ps-print-n-up 'custom-loads '("ps-print"))
 (put 'eshell-arg 'custom-loads '("esh-arg"))
-(put 'ps-print-printer 'custom-loads '("ps-print"))
+(put 'ps-print-printer 'custom-loads '("lpr" "ps-print"))
 (put 'message-various 'custom-loads '("message"))
 (put 'term 'custom-loads '("terminal" "term"))
 (put 'gnus-summary-exit 'custom-loads '("gnus-sum" "gnus"))
@@ -218,8 +219,8 @@
 (put 'auto-save 'custom-loads '("files" "startup"))
 (put 'tpu 'custom-loads '("tpu-edt" "tpu-extras"))
 (put 'w32 'custom-loads '("w32-vars"))
-(put 'viper-hooks 'custom-loads '("viper-init"))
 (put 'gnus-cite 'custom-loads '("gnus-cite"))
+(put 'viper-hooks 'custom-loads '("viper-init"))
 (put 'gnus-demon 'custom-loads '("gnus-demon"))
 (put 'reftex-optimizations-for-large-documents 'custom-loads '("reftex-vars"))
 (put 'viper-misc 'custom-loads '("viper-cmd" "viper-init" "viper"))
@@ -300,7 +301,7 @@
 (put 'apropos 'custom-loads '("apropos"))
 (put 'gomoku 'custom-loads '("gomoku"))
 (put 'eshell-pred 'custom-loads '("em-pred"))
-(put 'tools 'custom-loads '("add-log" "calculator" "compare-w" "diff-mode" "diff" "ediff" "elide-head" "emerge" "gud" "pcvs-defs" "smerge-mode" "speedbar" "tempo" "tooltip" "vc" "which-func" "copyright" "rcompile" "compile" "ebrowse" "etags" "glasses" "make-mode"))
+(put 'tools 'custom-loads '("add-log" "calculator" "compare-w" "diff-mode" "diff" "ediff" "elide-head" "emerge" "gud" "pcvs-defs" "smerge-mode" "speedbar" "tempo" "tooltip" "vc" "which-func" "rcompile" "copyright" "compile" "ebrowse" "etags" "glasses" "make-mode"))
 (put 'gnus-topic 'custom-loads '("gnus-topic"))
 (put 'sgml 'custom-loads '("sgml-mode"))
 (put 'keyboard 'custom-loads '("mule" "chistory" "type-break"))
@@ -359,7 +360,7 @@
 (put 'gnus-article-mime 'custom-loads '("gnus-art" "mm-uu"))
 (put 'emulations 'custom-loads '("crisp" "tpu-edt" "vip" "viper"))
 (put 'compression 'custom-loads '("jka-compr"))
-(put 'games 'custom-loads '("5x5" "bruce" "decipher" "dunnet" "fortune" "gametree" "gomoku" "handwrite" "hanoi" "landmark" "mpuz" "pong" "solitaire" "spook" "yow"))
+(put 'games 'custom-loads '("5x5" "bruce" "decipher" "dunnet" "fortune" "gametree" "gomoku" "handwrite" "hanoi" "landmark" "mpuz" "pong" "solitaire" "spook" "tetris" "yow"))
 (put 'nnmail-retrieve 'custom-loads '("nnmail"))
 (put 'gnus-duplicate 'custom-loads '("gnus-dup"))
 (put 'find-function 'custom-loads '("find-func"))
@@ -370,10 +371,10 @@
 (put 'log-view 'custom-loads '("log-view"))
 (put 'PostScript 'custom-loads '("ps-mode"))
 (put 'abbrev-mode 'custom-loads '("abbrev" "cus-edit" "mailabbrev"))
-(put 'eshell-term 'custom-loads '("em-term"))
 (put 'earcon 'custom-loads '("earcon"))
+(put 'eshell-term 'custom-loads '("em-term"))
 (put 'feedmail-headers 'custom-loads '("feedmail"))
-(put 'hypermedia 'custom-loads '("wid-edit" "metamail" "browse-url" "goto-addr"))
+(put 'hypermedia 'custom-loads '("wid-edit" "browse-url" "goto-addr" "metamail"))
 (put 'image 'custom-loads '("image-file"))
 (put 'ff 'custom-loads '("find-file"))
 (put 'prolog 'custom-loads '("prolog"))
@@ -393,7 +394,8 @@
 (put 'change-log 'custom-loads '("add-log"))
 (put 'gnus-group-levels 'custom-loads '("gnus-group" "gnus-start" "gnus"))
 (put 'cperl 'custom-loads '("cperl-mode"))
-(put 'bs-appearance 'custom-loads '("bs" "button"))
+(put 'bs-appearance 'custom-loads '("bs"))
+(put 'nil 'custom-loads '("button"))
 (put 'pcmpl-cvs 'custom-loads '("pcmpl-cvs"))
 (put 'eshell-mode 'custom-loads '("esh-mode"))
 (put 'files 'custom-loads '("mule" "files" "autoinsert" "autorevert" "cus-edit" "filecache" "recentf" "shadow" "ange-ftp"))
@@ -420,7 +422,7 @@
 (put 'gnus-article-hiding 'custom-loads '("gnus-art" "gnus-sum"))
 (put 'vhdl-mode 'custom-loads '("vhdl-mode"))
 (put 'lpr 'custom-loads '("lpr"))
-(put 'ispell 'custom-loads '("ispell"))
+(put 'ispell 'custom-loads '("flyspell" "ispell"))
 (put 'auto-revert 'custom-loads '("autorevert"))
 (put 'advice 'custom-loads '("advice"))
 (put 'picture 'custom-loads '("picture"))
@@ -463,7 +465,7 @@
 (put 'ebrowse-member 'custom-loads '("ebrowse"))
 (put 'terminal 'custom-loads '("terminal"))
 (put 'shadow 'custom-loads '("shadowfile" "shadow"))
-(put 'hl-line 'custom-loads '("hl-line"))
+(put 'hl-line 'custom-loads '("hl-line" "ibuf-ext"))
 (put 'eshell-glob 'custom-loads '("em-glob"))
 (put 'internal 'custom-loads '("startup" "cus-edit" "delim-col"))
 (put 'lisp 'custom-loads '("simple" "lisp" "lisp-mode" "ielm" "xscheme" "advice" "bytecomp" "checkdoc" "cl-indent" "cust-print" "edebug" "eldoc" "elp" "find-func" "pp" "re-builder" "shadow" "trace" "scheme"))
@@ -495,8 +497,8 @@
 (put 'reftex-index-support 'custom-loads '("reftex-vars"))
 (put 'pascal 'custom-loads '("pascal"))
 (put 'rmail-retrieve 'custom-loads '("rmail" "rmailsum"))
-(put 'data 'custom-loads '("text-mode" "arc-mode" "forms" "hexl" "jka-compr" "saveplace" "sort" "tar-mode" "time-stamp" "timeclock" "snmp-mode"))
-(put 'mail 'custom-loads '("simple" "startup" "time" "gnus" "mail-utils" "mm-decode" "message" "imap" "starttls" "emacsbug" "feedmail" "mail-extr" "mail-hist" "mailalias" "metamail" "mh-e" "mspools" "rmail" "sendmail" "smtpmail" "supercite" "uce" "eudc-vars" "fortune"))
+(put 'data 'custom-loads '("text-mode" "arc-mode" "forms" "hexl" "jka-compr" "saveplace" "sort" "tar-mode" "time-stamp" "snmp-mode" "timeclock"))
+(put 'mail 'custom-loads '("simple" "startup" "time" "eudc-vars" "gnus" "mail-utils" "mm-decode" "message" "imap" "starttls" "emacsbug" "feedmail" "mail-extr" "mail-hist" "mailalias" "metamail" "mh-e" "mspools" "rmail" "sendmail" "smtpmail" "supercite" "uce" "fortune"))
 (put 'paren-blinking 'custom-loads '("simple"))
 (put 'gnus-summary-sort 'custom-loads '("gnus-sum"))
 (put 'fast-lock 'custom-loads '("fast-lock"))
@@ -568,13 +570,13 @@
 (put 'mailcap 'custom-loads '("mailcap"))
 (put 'viper-search 'custom-loads '("viper-init"))
 (put 'ls-lisp 'custom-loads '("ls-lisp"))
-(put 'mule 'custom-loads '("mule" "mule-cmds" "utf-8" "kkc"))
+(put 'mule 'custom-loads '("mule" "mule-cmds" "kkc"))
 (put 'glasses 'custom-loads '("glasses"))
 (put 'vhdl-style 'custom-loads '("vhdl-mode"))
 (put 'tempo 'custom-loads '("tempo"))
 (put 'c 'custom-loads '("cc-vars" "cmacexp" "cpp" "hideif"))
 (put 'nnmail-prepare 'custom-loads '("nnmail"))
-(put 'processes 'custom-loads '("ansi-color" "comint" "cus-edit" "executable" "pcomplete" "shell" "term" "metamail" "rcompile" "rlogin" "compile" "sql" "flyspell"))
+(put 'processes 'custom-loads '("ansi-color" "comint" "cus-edit" "executable" "pcomplete" "shell" "term" "rcompile" "rlogin" "metamail" "compile" "sql" "flyspell"))
 (put 'ebnf2ps 'custom-loads '("ebnf2ps"))
 (put 'sendmail 'custom-loads '("sendmail"))
 (put 'gnus-article-signature 'custom-loads '("gnus-art"))
@@ -734,10 +736,14 @@ the tasks accomplished by such tools.")
 (custom-put-if-not 'ps-line-spacing 'standard-value t)
 (custom-put-if-not 'help-highlight-p 'custom-version "20.3")
 (custom-put-if-not 'help-highlight-p 'standard-value t)
+(custom-put-if-not 'ange-ftp-raw-login 'custom-version "21.3")
+(custom-put-if-not 'ange-ftp-raw-login 'standard-value t)
 (custom-put-if-not 'ps-paragraph-spacing 'custom-version "21.1")
 (custom-put-if-not 'ps-paragraph-spacing 'standard-value t)
 (custom-put-if-not 'flyspell-incorrect-hook 'custom-version "21.1")
 (custom-put-if-not 'flyspell-incorrect-hook 'standard-value t)
+(custom-put-if-not 'mode-line-inactive 'custom-version "21.2")
+(custom-put-if-not 'mode-line-inactive 'group-documentation nil)
 (custom-put-if-not 'browse-url-mosaic-program 'custom-version "20.3")
 (custom-put-if-not 'browse-url-mosaic-program 'standard-value t)
 (custom-put-if-not 'vc-cvs-register-switches 'custom-version "21.1")
@@ -1041,6 +1047,8 @@ as a PDF file <URL:http://www.ecma.ch/ecma1/STAND/ECMA-048.HTM>.")
 (custom-put-if-not 'keyboard-coding-system 'standard-value t)
 (custom-put-if-not 'sql-sybase-options 'custom-version "20.8")
 (custom-put-if-not 'sql-sybase-options 'standard-value t)
+(custom-put-if-not 'vc-cvs-sticky-tag-display 'custom-version "21.3")
+(custom-put-if-not 'vc-cvs-sticky-tag-display 'standard-value t)
 (custom-put-if-not 'gnus-read-newsrc-file 'custom-version "21.1")
 (custom-put-if-not 'gnus-read-newsrc-file 'standard-value t)
 (custom-put-if-not 'recentf 'custom-version "21.1")
@@ -1137,6 +1145,8 @@ as a PDF file <URL:http://www.ecma.ch/ecma1/STAND/ECMA-048.HTM>.")
 (custom-put-if-not 'vc-dired-terse-display 'standard-value t)
 (custom-put-if-not 'server-kill-new-buffers 'custom-version "21.1")
 (custom-put-if-not 'server-kill-new-buffers 'standard-value t)
+(custom-put-if-not 'vc-cvs-sticky-date-format-string 'custom-version "21.3")
+(custom-put-if-not 'vc-cvs-sticky-date-format-string 'standard-value t)
 (custom-put-if-not 'speedbar-hide-button-brackets-flag 'custom-version "21.1")
 (custom-put-if-not 'speedbar-hide-button-brackets-flag 'standard-value t)
 (custom-put-if-not 'delphi 'custom-version "21.1")
@@ -1144,7 +1154,7 @@ as a PDF file <URL:http://www.ecma.ch/ecma1/STAND/ECMA-048.HTM>.")
 (custom-put-if-not 'eval-expression-print-level 'custom-version "21.1")
 (custom-put-if-not 'eval-expression-print-level 'standard-value t)
 
-(defvar custom-versions-load-alist '((20.3 "xscheme") ("20.3.3" "dos-vars") (21.1 "ange-ftp") ("21.3" "replace") ("20.4" "files" "help" "sh-script" "compile") (21.3 "ange-ftp") ("21.2" "add-log" "sgml-mode") ("20.3" "desktop" "easymenu" "hscroll" "dabbrev" "ffap" "rmail" "paren" "mailabbrev" "frame" "uce" "mouse" "diary-lib" "sendmail" "simple" "debug" "hexl" "vcursor" "vc" "compile" "etags" "help-mode" "browse-url" "add-log" "find-func" "cus-edit" "replace") ("21.1" "server" "debug" "rmailedit" "dabbrev" "isearch" "gnus-start" "mule" "hideshow" "sendmail" "paths" "sgml-mode" "net-utils" "cperl-mode" "rmail" "font-lock" "gnus-nocem" "vc-hooks" "paren" "faces" "fortran" "vc" "etags" "cus-edit" "frame" "vc-sccs" "gnus-group" "gnus-sum" "add-log" "find-func" "wid-edit" "smtpmail" "vc-rcs" "files" "nnmail" "message" "ps-print" "vc-cvs" "simple" "gnus-agent" "flyspell" "gnus-art" "browse-url" "speedbar") ("20.8" "sql"))
+(defvar custom-versions-load-alist '((20.3 "xscheme") ("20.3.3" "dos-vars") (21.1 "ange-ftp") ("20.4" "files" "help" "sh-script" "compile") ("21.3" "vc-cvs" "replace" "ange-ftp") (21.3 "ange-ftp") ("21.2" "add-log" "sgml-mode") ("20.3" "desktop" "easymenu" "hscroll" "dabbrev" "ffap" "rmail" "paren" "mailabbrev" "frame" "uce" "mouse" "diary-lib" "sendmail" "simple" "debug" "hexl" "vcursor" "vc" "compile" "etags" "help-mode" "browse-url" "add-log" "find-func" "cus-edit" "replace") ("21.1" "server" "debug" "rmailedit" "dabbrev" "isearch" "gnus-start" "mule" "hideshow" "sendmail" "paths" "sgml-mode" "net-utils" "cperl-mode" "rmail" "font-lock" "gnus-nocem" "vc-hooks" "paren" "faces" "fortran" "vc" "etags" "cus-edit" "frame" "vc-sccs" "gnus-group" "gnus-sum" "add-log" "find-func" "wid-edit" "smtpmail" "vc-rcs" "files" "nnmail" "message" "ps-print" "vc-cvs" "simple" "gnus-agent" "flyspell" "gnus-art" "browse-url" "speedbar") ("20.8" "sql"))
  "For internal use by custom.")
 
 (provide 'cus-load)
