@@ -1,5 +1,7 @@
 2002-06-27  Dave Love  <fx@gnu.org>
 
+	* simple.el: Don't require cl when compiling.
+
 	* Makefile.in (DONTCOMPILE): Fix duplicates.
 
 	* emacs-lisp/bytecomp.el (byte-compile-insert-header): Fix typo.
